# agentforge-worker-service

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  send_test_message.py
.github/workflows/: worker-ci.yml
src/agentforge_worker/: __main__.py  config.py  logging_config.py  main.py
src/agentforge_worker/contracts/: __init__.py  session_events.py  session_request.py  session_result.py  task_request.py  task_result.py
src/agentforge_worker/graph/: __init__.py  agent_node.py  builder.py  state.py  supervisor.py  synthesizer.py
src/agentforge_worker/handlers/: __init__.py  event_mapper.py  session_handler.py  task_handler.py
src/agentforge_worker/llm/: __init__.py  client.py  factory.py
src/agentforge_worker/messaging/: __init__.py  consumer.py  producer.py  publisher.py
src/agentforge_worker/tools/: __init__.py  current_time.py  read_file.py  registry.py  scratchpad.py  web_search.py
tests/: conftest.py
tests/e2e/: test_session_scenarios.py
tests/integration/: test_broker_flow.py
tests/unit/: test_acl_event_mapping.py  test_agent_node.py  test_contracts.py  test_supervisor_node.py  test_tools.py
