[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge-worker"
version = "0.1.0"
description = "AgentForge Python worker: consumes agent tasks from RabbitMQ, runs them against a local LLM (Ollama) via LangChain, publishes results."
requires-python = ">=3.11"
dependencies = [
    "pika>=1.3.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
