[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge-worker"
version = "0.2.0"
description = "AgentForge Python worker: runs LangGraph multi-agent sessions (supervisor + ReAct agents) consumed from RabbitMQ, streams events back."
requires-python = ">=3.11"
dependencies = [
    "pika>=1.3.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2.50",
    "ddgs>=9.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "testcontainers[rabbitmq]>=4.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
